<resources>
    <string name="app_name">MoneySway</string>

    <string name="temp">WELCOME!</string>

    <string name="currency">\u20B9</string>

    <string name="login_phone_number_hint">Enter phone number</string>
    <string name="login_password_hint">Enter password</string>
    <string name="login_button_text">Sign In</string>
    <string name="login_sign_up_text">New to MoneySway? Sign up now.</string>

    <string name="sign_up_country_code">+91</string>
    <string name="sign_up_phone_number_hint">Your phone number</string>
    <string name="sign_up_otp_hint">Enter OTP</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_verify_button_text">Verify</string>
    <string name="sign_up_login_text">Already registered with MoneySway? Sign in now.</string>
    <string name="sign_up_user_name_hint">Your name</string>
    <string name="sign_up_password_hint">Your password</string>
    <string name="sign_up_done_button_text">Done</string>
    <string name="sign_out_button_text">Sign Out</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">+91 9090909090</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_calendar_view">Calendar View</string>
    <string name="menu_financial_calculators">Financial Calculators</string>
    <string name="menu_export_reports">Export Reports</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_title_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_help_center">Help Center</string>
    <string name="menu_contact">Contact</string>

    <string name="menu_title_sign_out"> </string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="signing_out">Signing out...</string>

    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_reports">Reports</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_dues">Dues</string>
    <string name="title_goals">Goals</string>

    <string name="line"> </string>

    <!-- Add transaction popup -->
    <string name="text_view_add_transaction">Add Transaction</string>
    <string name="radio_button_income_text">Income</string>
    <string name="radio_button_expense_text">Expense</string>
    <string name="edit_text_amount_hint">Amount</string>
    <string name="edit_text_description_hint">Description</string>
    <string name="image_view_memo_content_description">Memo</string>
    <string name="button_add_transaction">Add</string>
    <string name="button_cancel_transaction">Cancel</string>

    <!-- Transaction list item -->
    <string name="transaction_loading_text">Loading all transactions...</string>
    <string name="transaction_item_date">dd/mm/yyyy hh:ss</string>
    <string name="transaction_item_memo_content_description">Memo</string>
    <string name="transaction_item_type">Type</string>
    <string name="transaction_item_amount">Rs. 500.00</string>
    <string name="transaction_item_description">Description here.</string>
    <string name="transaction_item_category">Category: </string>
    <string name="transaction_item_payment_method">Payment Method: </string>
    <string name="transaction_item_remove_content_description">Remove</string>
    <string name="transaction_item_edit_content_description">Edit</string>


    <!-- Reports -->
    <string name="report_range_daily">Daily</string>
    <string name="report_range_weekly">Weekly</string>
    <string name="report_range_monthly">Monthly</string>
    <string name="report_range_yearly">Yearly</string>
    <string name="report_range_total">Total</string>
    <string name="report_range_custom">Custom</string>
    <string name="income_string">Income</string>
    <string name="total_income">\u20B9 30000</string>
    <string name="expense_string">Expenses</string>
    <string name="total_expense">\u20B9 14000</string>
    <string name="balance_string">Balance</string>
    <string name="total_balance">\u20B9 16000</string>
    <string name="income_categories_string">Income Categories : </string>
    <string name="expense_categories_string">Expense Categories : </string>
    <string name="amount_default">\u20B9 0.0</string>

</resources>
