<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:id="@+id/transactions_list_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="clip_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transaction_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/transaction_item_date"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/transaction_item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/transaction_item_type"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/transaction_item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/transaction_item_amount"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/transaction_item_description"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/transaction_item_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/transaction_item_category"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/transaction_item_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/transaction_item_payment_method"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/transaction_item_memo"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_weight="0.4"
            android:contentDescription="@string/transaction_item_memo_content_description"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:srcCompat="@drawable/receipt" />

    </LinearLayout>

</androidx.cardview.widget.CardView>